--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nong Oda</title>
+    <link rel="icon" type="image/png" href="src/assets/img/logo.png">
   </head>
   <body style="overflow-x: hidden;">
     <div id="app"></div>
